--- a/templates/nera/access_rule_form.html
+++ b/templates/nera/access_rule_form.html
@@ -58,7 +58,7 @@
             <div class="form-control">
                 <label class="label cursor-pointer">
                     <span class="label-text">Require Join Confirmation</span>
-                    <input name="join_confirmation" type="text" value="{{access_rule.join_confirmation|display_some}}"/>
+                    <input name="access_gain_action_confirmation" type="text" value="{{access_rule.access_gain_action_confirmation|display_some}}"/>
                 </label>
             </div>
 
