--- a/templates/nera2/follow-user-list.html
+++ b/templates/nera2/follow-user-list.html
@@ -1,6 +1,6 @@
 
 <ul>
-    {% for follow in list %}
-        {{ follow|safe }}
+    {% for user in items %}
+        {{ user|safe }}
     {% endfor %}
 </ul>
