--- a/templates/emails/reset_password.html
+++ b/templates/emails/reset_password.html
@@ -8,8 +8,8 @@
     margin: auto;
   "
 >
-  <h2 style="color: #333">Email Verification</h2>
-  <p>Use the following code to verify your email address:</p>
+  <h2 style="color: #333">Reset Password</h2>
+  <p>Use the following code to reset your password:</p>
   <div
     style="
       font-size: 24px;
@@ -28,7 +28,7 @@
     This code is valid for {{ ttl }} minutes.
   </p>
   <p style="color: #888; font-size: 12px; margin-top: 8px">
-    If you did not request this, please ignore this email.
+    If you did not request a password reset, please ignore this email.
   </p>
 </div>
 {% endblock %}
