--- a/templates/nera2/register_form.html
+++ b/templates/nera2/register_form.html
@@ -32,6 +32,20 @@
               />
             </label>
           </div>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Email</span>
+            </label>
+            <label class="input input-bordered flex items-center gap-2">
+              <input
+                type="text"
+                name="email"
+                placeholder="Enter Email"
+                value="{{email|display_some}}"
+                class="w-full lg:w-fit"
+              />
+            </label>
+          </div>
           <div class="form-control mt-4">
             <label class="label">
               <span class="label-text">Password</span>
