--- a/templates/nera2/profile_view_1.html
+++ b/templates/nera2/profile_view_1.html
@@ -1,4 +1,3 @@
 <h1>profile= {{user_id}}</h1>
 
-{{profile_discussion_view.as_ref().unwrap()|safe}}
-
+{{default_discussion_view.as_ref().unwrap()|safe}}
